--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ joblib==1.1.0
 jsonify==0.5
 MarkupSafe==2.0.1
 numpy==1.19.5
-pythainlp==2.3.2
+pythainlp>=2.0,<5.1
 python-crfsuite==0.9.8
 requests==2.27.1
 scikit-learn==0.24.2
