--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Jinja2==3.0.3
 joblib==1.1.0
 jsonify==0.5
 MarkupSafe==2.0.1
-numpy==1.19.5
+numpy>=1.21.0
 pythainlp==2.0.7
 python-crfsuite==0.9.8
 requests==2.27.1
