--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,16 @@
-certifi==2021.5.30
-charset-normalizer==2.0.12
-click==8.0.4
-dataclasses==0.6
-Flask==2.0.3
-idna==3.3
-importlib-metadata==4.8.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-joblib==1.1.0
-jsonify==0.5
-MarkupSafe==2.0.1
-numpy<2
-pythainlp==2.0.7
-python-crfsuite==0.9.8
-requests==2.27.1
-scikit-learn==0.24.2
-scipy==1.5.4
-sklearn==0.0
-threadpoolctl==3.1.0
-tinydb==4.7.0
-typing_extensions==4.1.1
-urllib3==1.26.9
-Werkzeug==2.0.3
-zipp==3.6.0
-gunicorn==20.0.4
+certifi>=2021.5.30
+charset-normalizer>=2.0.12
+click>=8.0.4
+Flask>=2.1.0
+idna>=3.3
+itsdangerous>=2.0.1
+Jinja2>=3.0.3
+joblib>=1.1.0
+MarkupSafe>=2.0.1
+numpy>=1.21.0
+scipy>=1.7.0
+scikit-learn>=1.0.0
+pythainlp>=2.0.7
+nltk>=3.6
+requests>=2.28.0
+gunicorn>=20.1.0
